--- a/opnsense/pam_opnsense/Makefile
+++ b/opnsense/pam_opnsense/Makefile
@@ -2,6 +2,9 @@ PORTNAME=	pam_opnsense
 PORTVERSION=	19.1.3
 CATEGORIES=	sysutils
 
+PATCH_SITES=	https://github.com/${GH_ACCOUNT}/${PORTNAME}/commit/
+PATCHFILES=	0eff045.patch:-p1 19d56c1.patch:-p1
+
 MAINTAINER=	ad@opnsense.org
 COMMENT=	OPNsense shared authentication system using PAM
 
