--- a/security/suricata/Makefile
+++ b/security/suricata/Makefile
@@ -36,7 +36,7 @@ MAKE_ENV=		RUSTFLAGS="${RUSTFLAGS} -C linker=${CC:Q} ${LDFLAGS:C/.+/-C link-arg=
 INSTALL_TARGET=	install-strip
 TEST_TARGET=	check
 
-CONFLICTS_INSTALL=	libhtp
+CONFLICTS_INSTALL=	libhtp suricata-devel
 
 SUB_FILES=	pkg-message
 
