--- a/opnsense/update/Makefile
+++ b/opnsense/update/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	update
-PORTVERSION=	24.1
+PORTVERSION=	24.1.2
 CATEGORIES=	sysutils
 PKGNAMEPREFIX=	${GH_ACCOUNT}-
 
@@ -17,6 +17,6 @@ MAKE_ENV=	UPDATE_RELEASE=${PORTVERSION}
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	${CATEGORIES:[1]}
-#GH_TAGNAME=	b1fcf22
+GH_TAGNAME=	24.1
 
 .include <bsd.port.mk>
