--- a/Templates/BSD.local.dist
+++ b/Templates/BSD.local.dist
@@ -655,7 +655,15 @@
         man
             cat1
             ..
+            cat2
+            ..
+            cat3
+            ..
+            cat4
+            ..
             cat5
+            ..
+            cat6
             ..
             cat7
             ..
@@ -694,6 +702,10 @@
             manl
             ..
             mann
+            ..
+            ru.KOI8-R
+                man1
+                ..
             ..
         ..
         misc
