--- a/sysutils/duplicity/Makefile
+++ b/sysutils/duplicity/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	duplicity
-DISTVERSION=	2.1.5
-PORTREVISION=	1
+DISTVERSION=	2.2.2
 CATEGORIES=	sysutils
 MASTER_SITES=	PYPI
 
@@ -12,7 +11,7 @@ LICENSE=	GPLv2+
 LICENSE_FILE=	${WRKSRC}/COPYING
 
 BUILD_DEPENDS=	${PY_SETUPTOOLS} \
-		${PYTHON_PKGNAMEPREFIX}setuptools-scm>0:devel/py-setuptools-scm@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}setuptools-scm>=8.0:devel/py-setuptools-scm@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}wheel>0:devel/py-wheel@${PY_FLAVOR}
 LIB_DEPENDS=	librsync.so:net/librsync
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}fasteners>=0:devel/py-fasteners@${PY_FLAVOR} \
@@ -30,9 +29,9 @@ CPE_VENDOR=	${PORTNAME}_project
 USE_LDCONFIG=	yes
 USE_PYTHON=	autoplist noflavors pep517 pytest
 
-SHEBANG_FILES=	bin/duplicity testing/overrides/bin/*
+SHEBANG_FILES=	duplicity/__main__.py testing/overrides/bin/*
 
-PORTDOCS=	CONTRIBUTING.md README-LOG.md README-REPO.md README-TESTING.md \
+PORTDOCS=	AUTHORS.md README-LOG.md README-REPO.md README-TESTING.md \
 		README.md
 
 OPTIONS_DEFINE=		B2 DOCS DROPBOX FTP FTPS GDOCS NLS S3
