--- a/net/radvd/Makefile
+++ b/net/radvd/Makefile
@@ -17,6 +17,7 @@ LICENSE_FILE=	${WRKSRC}/COPYRIGHT
 LICENSE_PERMS=	dist-mirror dist-sell pkg-mirror pkg-sell auto-accept
 
 GNU_CONFIGURE=	yes
+GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
 USES=		gmake pkgconfig
 CONFIGURE_ARGS=	--program-transform-name=
 USE_RC_SUBR=	radvd
