--- a/databases/py-duckdb/Makefile
+++ b/databases/py-duckdb/Makefile
@@ -10,7 +10,7 @@ WWW=		https://duckdb.org/
 
 LICENSE=	MIT
 
-BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools_scm>0:devel/py-setuptools_scm@${PY_FLAVOR} \
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools-scm>0:devel/py-setuptools-scm@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}pybind11>=2.6.0:devel/py-pybind11@${PY_FLAVOR} \
 		${PYNUMPY}
 RUN_DEPENDS=	${PYNUMPY} \
