--- a/devel/libunistring/Makefile
+++ b/devel/libunistring/Makefile
@@ -23,4 +23,6 @@ TEST_TARGET=	check
 INFO=		${PORTNAME}
 OPTIONS_DEFINE=	DOCS
 
+TESTING_UNSAFE=	test-time.c:46: assertion 'tt3 >= tv2.tv_sec' failed
+
 .include <bsd.port.mk>
