--- a/textproc/libucl/Makefile
+++ b/textproc/libucl/Makefile
@@ -1,6 +1,11 @@
 PORTNAME=	libucl
 DISTVERSION=	0.9.0
+PORTREVISION=	2
 CATEGORIES=	textproc devel
+
+PATCH_SITES=	https://github.com/${GH_ACCOUNT}/${PORTNAME}/commit/
+PATCHFILES=	da7aacb3d46fbc206ec6f2431f503eed843a3039.patch:-p1 \
+		708f5e21e3d85f56cdcbcbc418d8725f53bf390b.patch:-p1
 
 MAINTAINER=	bofh@FreeBSD.org
 COMMENT=	Universal configuration library parser
@@ -20,10 +25,10 @@ USE_LDCONFIG=	yes
 GNU_CONFIGURE=	yes
 GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
 
-CONFLICTS_INSTALL=	ucl
-
 INSTALL_TARGET=	install-strip
 TEST_TARGET=	check
+
+CONFLICTS_INSTALL=	ucl
 
 OPTIONS_DEFINE=		LUA REGEX SIGNATURES URLS UTILS
 OPTIONS_DEFAULT=	REGEX UTILS
@@ -34,20 +39,16 @@ SIGNATURES_DESC=	Enable signatures checking
 URLS_DESC=		Enable fetching URLs
 UTILS_DESC=		Enable tools: ucl_chargen, ucl_ucldump, ucl_tool
 
+LUA_USES=		lua
 LUA_CONFIGURE_ENABLE=	lua
 LUA_CONFIGURE_ENV=	LUA=${LOCALBASE}/bin/${LUA_CMD}
 LUA_LDFLAGS=		-L${LUA_LIBDIR}
-LUA_USES=		lua
-
 REGEX_CONFIGURE_ENABLE=	regex
-
+SIGNATURES_USES=		ssl
 SIGNATURES_CONFIGURE_ENABLE=	signatures
 SIGNATURES_CPPFLAGS=		-I${OPENSSLINC}
 SIGNATURES_LDFLAGS=		-L${OPENSSLLIB}
-SIGNATURES_USES=		ssl
-
 URLS_CONFIGURE_ENABLE=	urls
-
 UTILS_CONFIGURE_ENABLE=	utils
 
 .include <bsd.port.mk>
