--- a/opnsense/update/Makefile
+++ b/opnsense/update/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	update
 PORTVERSION=	24.1.5
+PORTREVISION=	1
 CATEGORIES=	sysutils
 PKGNAMEPREFIX=	${GH_ACCOUNT}-
 
@@ -17,6 +18,6 @@ MAKE_ENV=	UPDATE_RELEASE=${PORTVERSION}
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	${CATEGORIES:[1]}
-GH_TAGNAME=	24.1
+GH_TAGNAME=	f2a6831
 
 .include <bsd.port.mk>
