--- a/opnsense/installer/Makefile
+++ b/opnsense/installer/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	installer
-PORTVERSION=	24.1
+PORTVERSION=	24.7.d
 CATEGORIES=	sysutils
 PKGNAMEPREFIX=	${GH_ACCOUNT}-
 
@@ -17,6 +17,6 @@ NO_BUILD=	yes
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	${CATEGORIES:[1]}
-#GH_TAGNAME=	82740e3
+GH_TAGNAME=	5c84ae3
 
 .include <bsd.port.mk>
