--- a/opnsense/dhcp6c/Makefile
+++ b/opnsense/dhcp6c/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	dhcp6c
 DISTVERSION=	20240907
+PORTREVISION=	1
 DISTVERSIONPREFIX=v
 CATEGORIES=	net
 
@@ -14,6 +15,7 @@ CONFLICTS_INSTALL=	dhcp6
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	opnsense
+GH_TAGNAME=	b3c16c4
 
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--sysconfdir=${LOCALBASE}/etc --with-localdbdir=/var/db
