--- a/devel/py-pre-commit/Makefile
+++ b/devel/py-pre-commit/Makefile
@@ -1,9 +1,9 @@
 PORTNAME=	pre-commit
-DISTVERSION=	4.0.0
+DISTVERSION=	4.0.1
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
-DISTNAME=	pre_commit-${PORTVERSION}
+DISTNAME=	${PORTNAME:S/-/_/}-${DISTVERSION}
 
 MAINTAINER=	bofh@FreeBSD.org
 COMMENT=	Framework for managing and maintaining multi-language pre-commit hooks
