--- a/devel/ruff/Makefile
+++ b/devel/ruff/Makefile
@@ -4,7 +4,9 @@ CATEGORIES=	devel python
 
 MAINTAINER=	yuri@FreeBSD.org
 COMMENT=	Extremely fast Python linter, written in Rust
-WWW=		https://github.com/charliermarsh/ruff
+WWW=		https://astral.sh/ \
+		https://docs.astral.sh/ruff/ \
+		https://github.com/astral-sh/ruff
 
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
@@ -16,6 +18,8 @@ USES=		cargo
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	astral-sh
+
+RUSTFLAGS=	${ARCH:S/i386/YES/:C/^[a-z].*//:S/YES/-C target-feature=+sse,+sse2/} # add sse sse2 target-features only on i386
 
 #CARGO_BUILD_ARGS=	--package=file://${WRKSRC}/crates/ruff_cli
 CARGO_INSTALL_PATH=	crates/ruff_cli
